Now down to 4 bad boxes.

--- a/references.bib
+++ b/references.bib
@@ -6,171 +6,170 @@
 }
 
 @article{dipper89,
-  title={The q-Schur Algebra},
-  author={Dipper, R. and James, G.},
-  journal={Proceedings of the London Mathematical Society},
-  volume={3},
-  number={1},
-  pages={23--50},
-  year={1989},
-  publisher={Wiley Online Library}
+	title={The q-Schur Algebra},
+	author={Dipper, R. and James, G.},
+	journal={Proceedings of the London Mathematical Society},
+	volume={3},
+	number={1},
+	pages={23--50},
+	year={1989},
+	publisher={Wiley Online Library}
 }
 
 @article{blm90,
-  title={A geometric setting for the quantum deformation of GLn.},
-  author={Beilinson, A. A. and Lusztig, G. and MacPherson, R. and others},
-  journal={Duke Mathematical Journal},
-  volume={61},
-  number={2},
-  pages={655--677},
-  year={1990},
-  publisher={Duke University Press}
+	title={A geometric setting for the quantum deformation of GLn.},
+	author={Beilinson, A. A. and Lusztig, G. and MacPherson, R. and others},
+	journal={Duke Mathematical Journal},
+	volume={61},
+	number={2},
+	pages={655--677},
+	year={1990},
+	publisher={Duke University Press}
 }
 
 @article{ringel90,
-  title={Hall algebras},
-  author={Ringel, C. M.},
-  journal={Banach Center Publications},
-  volume={26},
-  number={1},
-  pages={433--447},
-  year={1990},
-  publisher={Institute of Mathematics Polish Academy of Sciences}
+	title={Hall algebras},
+	author={Ringel, C. M.},
+	journal={Banach Center Publications},
+	volume={26},
+	number={1},
+	pages={433--447},
+	year={1990},
+	publisher={Institute of Mathematics Polish Academy of Sciences}
 }
 
 @article{dipper91,
-  title={q-tensor space and q-Weyl modules},
-  author={Dipper, R. and James, G.},
-  journal={Transactions of the American Mathematical Society},
-  volume={327},
-  number={1},
-  pages={251--282},
-  year={1991}
+	title={q-tensor space and q-Weyl modules},
+	author={Dipper, R. and James, G.},
+	journal={Transactions of the American Mathematical Society},
+	volume={327},
+	number={1},
+	pages={251--282},
+	year={1991}
 }
 
 @article{ginzburg93,
-  title={Langlands reciprocity for affine quantum groups of type A n},
-  author={Ginzburg, V. and Vasserot, E.},
-  journal={International Mathematics Research Notices},
-  volume={1993},
-  number={3},
-  pages={67--85},
-  year={1993},
-  publisher={Hindawi Publishing Corporation}
+	title={Langlands reciprocity for affine quantum groups of type A n},
+	author={Ginzburg, V. and Vasserot, E.},
+	journal={International Mathematics Research Notices},
+	volume={1993},
+	number={3},
+	pages={67--85},
+	year={1993},
+	publisher={Hindawi Publishing Corporation}
 }
 
 @book{ringel93,
-  title={The Hall algebra approach to quantum groups},
-  author={Ringel, C. M.},
-  year={1993},
-  publisher={Sonderforschungsbereich 343}
+	title={The Hall algebra approach to quantum groups},
+	author={Ringel, C. M.},
+	year={1993},
+	publisher={Sonderforschungsbereich 343}
 }
 
 @inproceedings{du95,
-  title={A note on quantized Weyl reciprocity at roots of unity},
-  author={Du, Jie},
-  booktitle={Algebra Colloq},
-  volume={2},
-  number={4},
-  pages={363--372},
-  year={1995},
-  organization={Citeseer}
+	title={A note on quantized Weyl reciprocity at roots of unity},
+	author={Du, Jie},
+	booktitle={Algebra Colloq},
+	volume={2},
+	number={4},
+	pages={363--372},
+	year={1995},
+	organization={Citeseer}
 }
 
 @article{bongartz96,
-  title={On degenerations and extensions of finite dimensional modules},
-  author={Bongartz, K.},
-  journal={Advances in Mathematics},
-  volume={121},
-  number={2},
-  pages={245--287},
-  year={1996},
-  publisher={Elsevier}
+	title={On degenerations and extensions of finite dimensional modules},
+	author={Bongartz, K.},
+	journal={Advances in Mathematics},
+	volume={121},
+	number={2},
+	pages={245--287},
+	year={1996},
+	publisher={Elsevier}
 }
 
 @article{green96,
-  title={q-Schur algebras as quotients of quantized enveloping algebras},
-  author={Green, R. M.},
-  journal={Journal of algebra},
-  volume={185},
-  number={3},
-  pages={660--687},
-  year={1996},
-  publisher={Elsevier}
+	title={q-Schur algebras as quotients of quantized enveloping algebras},
+	author={Green, R. M.},
+	journal={Journal of algebra},
+	volume={185},
+	number={3},
+	pages={660--687},
+	year={1996},
+	publisher={Elsevier}
 }
 
-@article{morandi98,
-  title={Algebraic Groups, Grassmannians, and Flag Varieties},
-  author={Morandi, P.},
-  year={1998}
+@misc{morandi98,
+	title={Algebraic Groups, Grassmannians, and Flag Varieties},
+	author={Morandi, P.},
+	year={1998}
 }
 
 @article{lusztig99,
-  title={Aperiodicity in quantum affine gln},
-  author={Lusztig, G.},
-  journal={Asian Journal of Mathematics},
-  volume={3},
-  number={1},
-  pages={147--178},
-  year={1999},
-  publisher={International Press of Boston}
+	title={Aperiodicity in quantum affine gln},
+	author={Lusztig, G.},
+	journal={Asian Journal of Mathematics},
+	volume={3},
+	number={1},
+	pages={147--178},
+	year={1999},
+	publisher={International Press of Boston}
 }
 
 @article{reineke01,
-  title={Generic extensions and multiplicative bases of quantum groups at q = 0},
-  author={Reineke, M.},
-  journal={Represent. Theory},
-  volume={5},
-  pages={147--163},
-  year={2001}
+	title={Generic extensions and multiplicative bases of quantum groups at q = 0},
+	author={Reineke, M.},
+	journal={Represent. Theory},
+	volume={5},
+	pages={147--163},
+	year={2001}
 }
 
 @article{doty02,
-  title={Presenting Schur algebras},
-  author={Doty, S. and Giaquinto, A.},
-  journal={International Mathematics Research Notices},
-  volume={2002},
-  number={36},
-  pages={1907--1944},
-  year={2002},
-  publisher={OUP}
+	title={Presenting Schur algebras},
+	author={Doty, S. and Giaquinto, A.},
+	journal={International Mathematics Research Notices},
+	volume={2002},
+	number={36},
+	pages={1907--1944},
+	year={2002},
+	publisher={OUP}
 }
 
 @article{reineke02,
-  title={The monoid of families of quiver representations},
-  author={Reineke, M.},
-  journal={Proceedings of the London Mathematical Society},
-  volume={84},
-  number={3},
-  pages={663--685},
-  year={2002},
-  publisher={Cambridge University Press}
+	title={The monoid of families of quiver representations},
+	author={Reineke, M.},
+	journal={Proceedings of the London Mathematical Society},
+	volume={84},
+	number={3},
+	pages={663--685},
+	year={2002},
+	publisher={Cambridge University Press}
 }
 
-@article{reineke02-01,
-  title={The quantic monoid and degenerate quantized enveloping algebras},
-  author={Reineke, M.},
-  journal={arXiv preprint math/0206095},
-  year={2002}
+@misc{reineke02-01,
+	title={The quantic monoid and degenerate quantized enveloping algebras},
+	author={Reineke, M.},
+	year={2002},
+	eprint={arXiv:math/0206095}
 }
 
-@article{hubery04,
-  title={The composition algebra of an affine quiver},
-  author={Hubery, A.},
-  journal={arXiv preprint\\
-  math/0403206},
-  year={2004}
+@misc{hubery04,
+	title={The composition algebra of an affine quiver},
+	author={Hubery, A.},
+	year={2004},
+	eprint={arXiv:math/0403206}
 }
 
 @article{doty07,
-  title={Presenting affine q-Schur algebras},
-  author={Doty, S. R. and Green, R. M.},
-  journal={Mathematische Zeitschrift},
-  volume={256},
-  number={2},
-  pages={311--345},
-  year={2007},
-  publisher={Springer}
+	title={Presenting affine q-Schur algebras},
+	author={Doty, S. R. and Green, R. M.},
+	journal={Mathematische Zeitschrift},
+	volume={256},
+	number={2},
+	pages={311--345},
+	year={2007},
+	publisher={Springer}
 }
 
 @misc{hubery07,
@@ -181,17 +180,17 @@
 }
 
 @article{hudec07,
-  title={The Grassmanian as a Projective Variety},
-  author={Hudec, D. A.},
-  year={2007}
+	title={The Grassmanian as a Projective Variety},
+	author={Hudec, D. A.},
+	year={2007}
 }
 
 @book{deng08,
-  title={Finite dimensional algebras and quantum groups},
-  author={Deng, B. and Du, J. and Parshall, B.},
-  number={150},
-  year={2008},
-  publisher={American Mathematical Soc.}
+	title={Finite dimensional algebras and quantum groups},
+	author={Deng, B. and Du, J. and Parshall, B.},
+	number={150},
+	year={2008},
+	publisher={American Mathematical Soc.}
 }
 
 @misc{dou10,
@@ -202,22 +201,22 @@
 }
 
 @article{su10,
-  title={A generic multiplication in quantised Schur algebras},
-  author={Su, X.},
-  journal={Quarterly journal of mathematics},
-  volume={61},
-  number={4},
-  pages={497--510},
-  year={2010},
-  publisher={OUP}
+	title={A generic multiplication in quantised Schur algebras},
+	author={Su, X.},
+	journal={Quarterly journal of mathematics},
+	volume={61},
+	number={4},
+	pages={497--510},
+	year={2010},
+	publisher={OUP}
 }
 
 @book{deng12book,
-  title={A double Hall algebra approach to affine quantum Schur--Weyl theory},
-  author={Deng, B. and Du, J. and Fu, Q.},
-  volume={401},
-  year={2012},
-  publisher={Cambridge University Press}
+	title={A double Hall algebra approach to affine quantum Schur--Weyl theory},
+	author={Deng, B. and Du, J. and Fu, Q.},
+	volume={401},
+	year={2012},
+	publisher={Cambridge University Press}
 }
 
 @article{deng12,
@@ -231,7 +230,7 @@
 	publisher={North-Holland}
 }
 
-@article{su12,
+@misc{su12,
 	author = {Jensen, B.T. and Su, X.},
 	title = {A geometric realisation of 0-Schur and 0-Hecke algebras},
 	year = {2012},
@@ -239,48 +238,48 @@
 }
 
 @article{bridgeland13,
-  title={Quantum groups via Hall algebras of complexes},
-  author={Bridgeland, T.},
-  journal={Annals of Mathematics},
-  pages={739--759},
-  year={2013},
-  publisher={JSTOR}
+	title={Quantum groups via Hall algebras of complexes},
+	author={Bridgeland, T.},
+	journal={Annals of Mathematics},
+	pages={739--759},
+	year={2013},
+	publisher={JSTOR}
 }
 
 @article{deng13,
-  title={Generic extensions and composition monoids of cyclic quivers},
-  author={Deng, B. and Du, J. and Mah, A.},
-  journal={Contem. Math},
-  volume={602},
-  pages={99--114},
-  year={2013}
+	title={Generic extensions and composition monoids of cyclic quivers},
+	author={Deng, B. and Du, J. and Mah, A.},
+	journal={Contem. Math},
+	volume={602},
+	pages={99--114},
+	year={2013}
 }
 
 @book{harris13,
-  title={Algebraic geometry: a first course},
-  author={Harris, J.},
-  volume={133},
-  year={2013},
-  publisher={Springer Science \& Business Media}
+	title={Algebraic geometry: a first course},
+	author={Harris, J.},
+	volume={133},
+	year={2013},
+	publisher={Springer Science \& Business Media}
 }
 
-@article{su15,
-  author = {Jensen, B. T. and Su, X.},
-  title = {Projective modules of 0-Schur algebras},
-  year = {2015},
-  eprint = {arXiv:1312.5487v3}
+@misc{su15,
+	author = {Jensen, B. T. and Su, X.},
+	title = {Projective modules of 0-Schur algebras},
+	year = {2015},
+	eprint = {arXiv:1312.5487v3}
 }
 
-@article{deng15-01,
-  author = {Deng, B. and Ruan, S.},
-  title = {Hall polynomials for tame type},
-  year = {2015},
-  eprint = {arXiv:1512.03504}
+@misc{deng15-01,
+	author = {Deng, B. and Ruan, S.},
+	title = {Hall polynomials for tame type},
+	year = {2015},
+	eprint = {arXiv:1512.03504}
 }
 
-@article{su17,
-  author = {Jensen, B. T. and Su, X.},
-  title = {Degenerate 0-Schur algebras and nil-Temperley-Lieb algebras},
-  year = {2017},
-  eprint = {arXiv:1705.06084v2}
+@misc{su17,
+	author = {Jensen, B. T. and Su, X.},
+	title = {Degenerate 0-Schur algebras and nil-Temperley-Lieb algebras},
+	year = {2017},
+	eprint = {arXiv:1705.06084v2}
 }
