Wrote my acknowledgements.

--- a/report.tex
+++ b/report.tex
@@ -5,17 +5,37 @@
 \input{titlepage}
 
 \chapter*{Dedication}
-
+\begin{center}
 Dedicated to Midnight and Marmite.
+\end{center}
 
 \chapter*{Abstract}
-
+\begin{center}
 Write an abstract.
+\end{center}
 
 \chapter*{Acknowledgements}
 
-Thanks everyone...
 
+To my A-level Maths teacher Mr Stevens, thank you for inspiring me to go further in Mathematics. May you rest in peace.
+
+Professor Fran Burstall, your lectures and talks have always been engaging and I credit you for my interest in pure Mathematics. Thank you for believing in me and encouraging me to apply for a PhD. Absolute legend.
+
+Rob, I am grateful for our many mathematical discussions walking around the lake and for showing me how to use Tikz. Big respect to you Rob.
+
+Thank you Jack for introducing me to Linux and for crucial tech support.
+
+To my friends Hayley, Adwaye and Roland, thank you for your support, advice, encouragement and fun times. Special thanks to Emma for your care and support and pushing me to get organised. To my flatmate Sophie for keeping me motivated.
+
+Thank you to my tutees for giving me an audience and for the most part seeming interested.
+
+For moral support and advice, I am grateful to Karsten Matthies, Gunnar Traustason, Peter Mörters and Alastair Craw.
+
+Thank you to my supervisor Dr Xiuping Su for introducing me to the project and for many helpful discussions. To my second supervisor Professor Alastair King, thank you for our discussions on algebraic geometry which helped get me through a difficult part of the project.  
+
+Thank you to my parents Jane and David, my sister Jessica and the family cats Midnight, Marmite, Misty, Loki and Dora for their unconditional love and support and for believing in me when I did not. My long time friend Omar, thank you for being there in times of stress.
+
+There are countless people not directly mentioned here who have influenced me and enabled me to reach this point. I am sincerely grateful to everyone in the university ecosystem that makes things work, with special thanks to the administrative staff in the department, to the hospitality team for hundreds of coffees and the occasional meal, to the library staff, to the estates team that maintain a pleasant environment, to the university medical centre and to fellow students in the department.
 
 \tableofcontents
 
